# bindata

bindata/: Cargo.toml
bindata/src/: decode.rs  encode.rs  error.rs  lib.rs
binser/: Cargo.toml
binser-derive/: Cargo.toml
binser-derive/src/: lib.rs
binser/src/: encode.rs  lib.rs  size.rs
derive/: Cargo.toml
derive/src/: lib.rs  repr.rs
tests/: Cargo.toml
tests/src/: lib.rs
