[package]
name = "binser"
description = "A crate for binary (de)serialization."
license = "MIT"
version = "0.2.0"
authors = ["Jan Trefil <8711792+htrefil@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binser-derive = "0.1.1"